Module 3/m03a02animal2-handout/grading/2024-09-16-11-40-40/compile.err
Animal.java:15: error: cannot find symbol
        } else if (answer.toLowerCase().equals("no")) {
                   ^
  symbol:   variable answer
  location: class Animal
1 error
